# arkitekt-next

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  RELEASING.md  ark.py  docker-compose.yaml  hub_config.yaml  manifest.yaml  pyproject.toml  test.py  update_deps.py
.arkitekt/: .gitignore
.arkitekt_next/: builds.yaml  manifest.yaml
.arkitekt_next/flavours/vanilla/: Dockerfile  config.yaml
.devcontainer/vanilla/: devcontainer.json
.github/workflows/: composability.yaml  coverage.yaml  docker-master.yaml  integration.yaml  release.yaml  tests.yaml
arkitekt_next/: __blok__.py  __init__.py  builders.py  constants.py  node_id.py  service_registry.py  utils.py
arkitekt_next/app/: app.py
arkitekt_next/apps/service/: fakts_qt.py  herre_qt.py
arkitekt_next/bloks/: arkitekt.py  config.py  fluss.py  funcs.py  gateway.py  internal_docker.py  kabinet.py  livekit.py  lok.py  mikro.py  minio.py  mount.py  postgres.py  redis.py  rekuest.py  socket.py
arkitekt_next/cli/: docs.py  interactive.py  io.py  main.py  options.py  texts.py  types.py  ui.py  vars.py
arkitekt_next/cli/commands/: _server_common.py
arkitekt_next/cli/commands/app/: main.py
arkitekt_next/cli/commands/app/call/: main.py
arkitekt_next/cli/commands/app/init/: main.py
arkitekt_next/cli/commands/app/inspect/: all.py  implementations.py  requirements.py
arkitekt_next/cli/commands/app/manifest/: scopes.py  version.py
arkitekt_next/cli/commands/app/run/: dev.py  prod.py  tests.py
arkitekt_next/cli/commands/call/: local.py  main.py  remote.py
arkitekt_next/cli/commands/coord/: main.py
arkitekt_next/cli/commands/engine/: main.py
arkitekt_next/cli/commands/hub/: connect.py  main.py
arkitekt_next/cli/commands/hubinator/: main.py
arkitekt_next/cli/commands/init/: main.py
arkitekt_next/cli/commands/inspect/: all.py  implementations.py  main.py
arkitekt_next/cli/commands/kabinet/: build.py  flavour.py  init.py  io.py  main.py  selector.py  types.py  validate.py
arkitekt_next/cli/commands/manifest/: inspect.py  main.py  version.py
arkitekt_next/cli/commands/mesh/: main.py
arkitekt_next/cli/commands/plugin/: build.py  flavour.py  init.py  io.py  main.py  publish.py  selector.py
arkitekt_next/cli/commands/run/: dev.py  main.py  prod.py  tests.py  utils.py
arkitekt_next/cli/commands/self/: constants.py  info.py  main.py  upgrade.py  version.py
arkitekt_next/cli/dockerfiles/: uv.dockerfile  vanilla.dockerfile
arkitekt_next/pytest/: fixtures.py
arkitekt_next/qt/: builders.py  magic_bar.py  types.py
arkitekt_next/server/: __init__.py  connect.py  dev.py  diff.py  lok.py  runner.py  templates.py  utils.py  wizard.py
arkitekt_next/server/config/: __init__.py  base.py  coord.py  engine.py  hub.py  kommunity.py  server.py
arkitekt_next/server/services/: __init__.py  alpaka.py  base.py  elektro.py  fluss.py  kabinet.py  kraph.py  lok.py  lovekit.py  mikro.py  rekuest.py
configs/: fluss.yaml  kabinet.yaml  kraph.yaml  mikro.yaml  minio_init.yaml  rekuest.yaml
docs/: app_types.md  cli.md  flavours.md  plugin_app.md  standalone_app.md
examples/classic/: upload_image.py
examples/qt/: pyqt_call_arkitekt.py
tests/: conftest.py  test_instantiation.py  test_qt.py  test_upload.py
tests/cli/: test_build.py  test_build_warning.py  test_commands.py  test_docs_links.py  test_init.py  test_inspect.py  test_interactive_guards.py  test_lok_integration.py  test_manifest.py  test_mesh.py  test_plugin_inspect.py  test_self.py  test_server_profiles.py
there/: .gitignore  docker-compose.yaml
there/.arkitekt_next/: manifest.yaml
there/configs/: Caddyfile  fluss.yaml  kabinet.yaml  kraph.yaml  mikro.yaml  minio_init.yaml  rekuest.yaml
this/: main.py  pyproject.toml
this/.arkitekt_next/: manifest.yaml
this/.devcontainer/vanilla/: devcontainer.json
website/: docusaurus.config.js  setup.yaml
website/docs/: intro.md
website/docs/protocol/: design.md
website/docs/protocol/reserve/: unactive_provision.md
website/docs/protocol/reserve/active_app/provided_before/: no_reservation.md
website/docs/protocol/reserve/unactive_app/: active_provision.md
website/docs/reference/apps/: default.md  fluss.md  mikro.md  rekuest.md
website/src/components/: HomepageFeatures.tsx
